# web-combinator

./: build.sbt
WebCombinator/: LICENSE  WebCombinator.cabal
WebCombinator/app/: Main.hs
WebCombinator/src/: WebCombinator.hs
WebCombinator/src/WebCombinator/: File.hs  HTTP.hs  Message.hs  Pure.hs  Util.hs
WebCombinator/test/: Spec.hs
src/main/scala/web_combinator/: DSL.scala  package.scala
src/test/scala/web_combinator/: AppSpec.scala  WebappSpec.scala
