name:                WebCombinator
version:             0.1.0.0
synopsis:            Build web applications compositionally
description:         Please see README.md
homepage:            http://github.com/chris-martin/web-combinator#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Martin
maintainer:          ch.martin@gmail.com
copyright:           2016 Chris Martin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable WebCombinator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WebCombinator
  default-language:    Haskell2010

test-suite WebCombinator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WebCombinator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chris-martin/web-combinator
